--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,25 @@ services:
       - type: bind
         source: ./src
         target: /var/www/html
+    networks:
+      - backend
+
+  web:
+    image: nginx:1.22
+    container_name: web
+    ports:
+      - 8080:80
+    depends_on:
+      - app
+    volumes:
+      - type: bind
+        source: ./src
+        target: /var/www/html
+      - type: bind
+        source: ./Docker/web/default.conf
+        target: /etc/nginx/conf.d/default.conf
+    networks:
+      - backend
+
+networks:
+  backend:
