fix: fastcgi_passの指定をappコンテナとTCP通信するように変更

--- a/Docker/web/default.conf
+++ b/Docker/web/default.conf
@@ -32,7 +32,7 @@ server {
     #
     location ~ \.php$ {
         root           /var/www/html/public;
-        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_pass   app:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
