Update: nginxのコンフィグを修正
dbの構築のブランチだけどnginxのコンフィグの気になる部分を見つけたので修正
readoubleのデプロイページより

--- a/Docker/web/default.conf
+++ b/Docker/web/default.conf
@@ -34,7 +34,7 @@ server {
         root           /var/www/html/public;
         fastcgi_pass   app:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
         include        fastcgi_params;
     }
 
