--- a/Docker/web/default.conf
+++ b/Docker/web/default.conf
@@ -5,11 +5,14 @@ server {
     root        /var/www/html/public;
     index       index.php;
 
+    # headers
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        #root   /usr/share/nginx/html;
-        #index  index.html index.htm;
         try_files $uri $uri/ /index.php?$query_string;
     }
 
