--- a/Docker/web/default.conf
+++ b/Docker/web/default.conf
@@ -1,9 +1,8 @@
 server {
-    listen      80 default_server;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name localhost;
-
     root        /var/www/html/public;
-    index       index.php;
 
     # headers
     add_header X-XSS-Protection "1; mode=block";
@@ -12,11 +11,18 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    index       index.php;
+
+    charset utf-8;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    #error_page  404              /404.html;
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
 
     # redirect server error pages to the static page /50x.html
     #
@@ -25,14 +31,7 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
+    # pass the PHP scripts to FastCGI server listening on app:9000
     location ~ \.php$ {
         root           /var/www/html/public;
         fastcgi_pass   app:9000;
@@ -41,11 +40,8 @@ server {
         include        fastcgi_params;
     }
 
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
+    #location ~ /\.(?!well-known).* {
+    #    deny all;
     #}
 }
 
