Update: 環境変数をcompose.yamlで管理

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,9 @@ services:
       context: .
       dockerfile: ./Docker/app/Dockerfile
     container_name: app
+    environment:
+      TZ: Asia/Tokyo
+      COMPOSER_ALLOW_SUPERUSER: 1
     volumes:
       - type: bind
         source: ./src
@@ -15,14 +18,13 @@ services:
   web:
     image: nginx:1.22
     container_name: web
+    environment:
+      TZ: Asia/Tokyo
     ports:
       - 8080:80
     depends_on:
       - app
     volumes:
-      - type: bind
-        source: ./src
-        target: /var/www/html
       - type: bind
         source: ./Docker/web/default.conf
         target: /etc/nginx/conf.d/default.conf
