Update: コンテナ内のディレクトリの指定をcompose.yamlにする

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
     environment:
       TZ: ${TIME_ZONE}
       COMPOSER_ALLOW_SUPERUSER: 1
+    working_dir: /var/www/html
     depends_on:
       - db
     volumes:
