--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,14 @@
 TIME_ZONE=Asia/Tokyo
 
 # nginx local forwarding port.
-LOCAL_PORT=8080
 NGINX_TAG=1.22
+LOCAL_PORT=8080
 
 # DB environments.
+MYSQL_TAG=8.0
 DB_NAME=laravel
 DB_USER=user
 DB_PASSWORD=password
 DB_ROOT_PASSWORD=p4zzw0rd
+
+# vim:ft=conf
