--- a/compose.yaml
+++ b/compose.yaml
@@ -38,7 +38,7 @@ services:
       - backend
 
   db:
-    image: mysql:8.0
+    image: mysql:${MYSQL_TAG}
     container_name: db
     ports:
       - 3306:3306
